k8s/deploy_api1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app1
  template:
    metadata:
      labels:
        app: api-app1
    spec:
      containers:
        - name: api-app1
          image: docker-app1:latest
          ports:
            - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: api-service1
spec:
  selector:
    app: api-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7001
  type: ClusterIP
