k8s/deploy_api2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app2
  template:
    metadata:
      labels:
        app: api-app2
    spec:
      containers:
        - name: api-app2
          image: docker-app2:latest
          ports:
            - containerPort: 7002
---
apiVersion: v1
kind: Service
metadata:
  name: api-service2
spec:
  selector:
    app: api-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7002
  type: ClusterIP
