k8s/deploy_frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-frontend
  template:
    metadata:
      labels:
        app: api-frontend
    spec:
      containers:
        - name: api-frontend
          image: docker-frontend:latest
          ports:
            - containerPort: 7003
---
apiVersion: v1
kind: Service
metadata:
  name: api-service-frontend
spec:
  selector:
    app: api-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7003
  type: ClusterIP
