k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttt-skfs2m-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Forcing HTTPS
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: ttt.skfs2m.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service-frontend
                port:
                  number: 7003
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: api-service1
                port:
                  number: 7001
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: api-service2
                port:
                  number: 7002
  tls:
    - hosts:
        - ttt.skfs2m.com
      secretName: ttt-skfs2m-com-tls # Utiliser le secret du certificat auto-signé
